<resources>
    <string name="app_name">n-Puzzle</string>

    <string name="title_activity_select_mode">Welkom!</string>
    <string name="title_activity_game_play">Puzzle</string>
    <string name="title_activity_you_win">Geslaagd!</string>

    <string name="reshuffle">Reshuffle</string>
    <string name="changeDifficulty">Verander moeilijkheidsgraad</string>
    <string name="easy">Makkelijk</string>
    <string name="medium">Gemiddeld</string>
    <string name="hard">Moeilijk</string>
    <string name="stop">Stop</string>
    <string name="selectDifficulty">Selecteer de moeilijkheidsgraad:</string>
    <string name="congratulations">Gefeliciteerd, je hebt de puzzel opgelost!</string>
    <string name="moves">Moves:</string>
    <string name="newGame">Nieuw spel</string>
    <string name="chooseMode">Kies je modus:</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Versus (1v1)</string>
    <string name="title_activity_player_selection">Speler lijst</string>
    <string name="accept">Accept</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_multiplayer_connecting">Connecting…</string>
    <string name="title_activity_multiplayer_waiting_for_game_start">Wachten op spel start…</string>
    <string name="challenge_someone">Daag iemand uit.</string>
    <string name="wait_for_game_start">Even wachten tot het spel wordt gestart.</string>
    <string name="title_activity_you_lose">YouLose</string>
    <string name="youlost">Je hebt het spel verloren!</string>
</resources>
