<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ImageSelection">

    <TextView android:text="@string/selectDifficulty" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDifficultySelection"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDifficultySelection"
        android:orientation="horizontal"
        android:id="@+id/rgMoeilijkheidsgraad">

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:id="@+id/rbEasy"
            android:checked="false"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:id="@+id/rbMedium"
            android:checked="true"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:id="@+id/rbHard"
            android:checked="false"/>
    </RadioGroup>

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gvImageSelection"
        android:layout_below="@+id/rgMoeilijkheidsgraad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:choiceMode="singleChoice"
        android:numColumns="2"/>

</RelativeLayout>
