<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="han.ica.projects.nPuzzle492724.SelectMode">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chooseMode"
        android:id="@+id/txtChooseMode"
        android:layout_above="@+id/btnSingleplayer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singleplayer"
        android:id="@+id/btnSingleplayer"
        android:textSize="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"
        android:id="@+id/btnMultiplayer"
        android:textSize="30dp"
        android:layout_below="@+id/btnSingleplayer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="15dp"/>
</RelativeLayout>
