<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="han.ica.projects.nPuzzle492724.YouWin">
    <TextView
        android:text="@string/congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCongratulations"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="19sp"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivPicture"
        android:layout_below="@+id/tvCongratulations"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scaleType="centerInside"
        android:src="@drawable/puzzle_0"
        android:cropToPadding="false"
        android:adjustViewBounds="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:text="@string/moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvMoves"
        android:layout_below="@+id/ivPicture"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:text="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPlayerMoves"
        android:layout_alignTop="@+id/tvMoves"
        android:layout_toRightOf="@+id/tvMoves"
        android:layout_toEndOf="@+id/tvMoves"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#ff000000"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGame"
        android:id="@+id/btnNewGame"
        android:layout_below="@+id/tvMoves"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
